--- a/style.css
+++ b/style.css
@@ -28,10 +28,14 @@ p {
 }
 
 #message {
-    display: none;
-    font-size: 50px;
-    color: red;
-    font-family: Arial, sans-serif;
-    margin-top: 20px;
+  display: none;
+  font-size: 50px;
+  color: red;
+  font-family: Arial, sans-serif;
+  margin-top: 20px;
+}
+
+#name {
+  margin-bottom: 4px;
 }
 
